--- a/about.html
+++ b/about.html
@@ -24,40 +24,34 @@
 </head>
 <body style="background-color: rgb(105 88 63);">
     <div class="menu-main--bg-img">
-        <div class="nav-main" style="display: flex;">
-            <nav class="navbar">
-                <ul class="nav-menu" style="display: flex;">
-                    <li>
-                        <a href="index.html" class="nav-link">HOME</a>
-                    </li>
-                    <li>
-                        <a href="menu.html" class="nav-link">MENU</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">BOOKING</a>
-                    </li>
-                </ul>
-            </nav>
-            <img src="assets/logo.png" class="logo">
-            <nav class="navbar">
-                <ul class="nav-menu" style="display: flex;">
-                    <li>
-                        <a href="about.html" class="nav-link">ABOUT</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">BLOG</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">CONTACT</a>
-                    </li>
-                </ul>
-            </nav>
+        <nav class="navbar" style="gap: 30px;">
+            <img src="assets/logo.png" alt="" class="logo">
+            <ul class="nav-menu">
+                <li>
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="menu.html" class="nav-link">Menu</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Booking</a>
+                </li>
+                <li>
+                    <a href="about.html"nav-link">About</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
             <div class="hamburger">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-        </div>
+        </nav>
         <div class="menu-page--slider-headings">
             <div class="menu-page--slider-main-heading">Discover</div>
             <div class="menu-page--slider-sub-heading">OUR STORY</div>
