--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <img src="assets/logo.png" alt="" class="logo">
             <ul class="nav-menu">
                 <li>
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link">Menu</a>
+                    <a href="menu.html" class="nav-link">Menu</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">Booking</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link">About</a>
+                    <a href="about.html"nav-link">About</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">Blog</a>
