--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <div class="offer-grid--item1" style="background-image: url(assets/offerings-1.jpg); background-position: unset; background-repeat: no-repeat; background-size: cover;"></div>
             <div class="offer-grid--item2">
                 <div class="offer--headings">
-                    <h1 class="offer-main--heading">Aromatic</h1>
-                    <h2 class="offer-sub--heading">TASTE</h2>
+                    <h1 class="offer-main--heading offer-1">Aromatic</h1>
+                    <h2 class="offer-sub--heading offer-1">TASTE</h2>
                 </div>
-                <p class="offer--detail" 
+                <p class="offer--detail offer-1" 
                 style="color: white;
                 font-family: 'plus jakarta sans', sans-serif;
                 width: 75%;
@@ -108,10 +108,10 @@
         <div class="offer--grid-2">  
             <div class="offer-grid--item3">
                 <div class="offer--headings">
-                    <h1 class="offer-main--heading">Delicious</h1>
-                    <h2 class="offer-sub--heading">FOODS</h2>
+                    <h1 class="offer-main--heading offer-2">Delicious</h1>
+                    <h2 class="offer-sub--heading offer-2">FOODS</h2>
                 </div>
-                <p class="offer--detail"
+                <p class="offer--detail offer-2"
                 style="color: white;
                 font-family: 'plus jakarta sans', sans-serif;
                 width: 75%;
@@ -129,10 +129,10 @@
             <div class="offer-grid--item5" style="background-image: url(assets/offerings-3.jpg); background-repeat: no-repeat; background-size: cover; background-position: center;"></div> 
             <div class="offer-grid--item6">
                 <div class="offer--headings">
-                    <h1 class="offer-main--heading">Read</h1>
-                    <h2 class="offer-sub--heading">Books</h2>
+                    <h1 class="offer-main--heading offer-3">Read</h1>
+                    <h2 class="offer-sub--heading offer-3">Books</h2>
                 </div>
-                <p class="offer--detail"
+                <p class="offer--detail offer-3"
                 style="color: white;
                 font-family: 'plus jakarta sans', sans-serif;
                 width: 75%;
@@ -148,10 +148,10 @@
         <div class="offer--grid-2">  
             <div class="offer-grid--item7">
                 <div class="offer--headings">
-                    <h1 class="offer-main--heading">Coffee</h1>
-                    <h2 class="offer-sub--heading">ART GALLERY</h2>
+                    <h1 class="offer-main--heading offer-4">Coffee</h1>
+                    <h2 class="offer-sub--heading offer-4">ART GALLERY</h2>
                 </div>
-                <p class="offer--detail"
+                <p class="offer--detail offer-4"
                 style="color: white;
                 font-family: 'plus jakarta sans', sans-serif;
                 width: 75%;
@@ -169,10 +169,10 @@
             <div class="offer-grid--item9" style="background-image: url(assets/offerings-5.jpg); background-repeat: no-repeat; background-size: cover;background-position: bottom;"></div> 
             <div class="offer-grid--item10">
                 <div class="offer--headings">
-                    <h1 class="offer-main--heading">Customized</h1>
-                    <h2 class="offer-sub--heading">CUPS</h2>
+                    <h1 class="offer-main--heading offer-5">Customized</h1>
+                    <h2 class="offer-sub--heading offer-5">CUPS</h2>
                 </div>
-                <p class="offer--detail"
+                <p class="offer--detail offer-5"
                 style="color: white;
                 font-family: 'plus jakarta sans', sans-serif;
                 width: 75%;
@@ -188,10 +188,10 @@
         <div class="offer--grid-2">  
             <div class="offer-grid--item11">
                 <div class="offer--headings">
-                    <h1 class="offer-main--heading">MOOD</h1>
-                    <h2 class="offer-sub--heading">BASED COFFEE<br>SUGGESTIONS</h2>
+                    <h1 class="offer-main--heading offer-6">MOOD</h1>
+                    <h2 class="offer-sub--heading offer-6">BASED COFFEE<br>SUGGESTIONS</h2>
                 </div>
-                <p class="offer--detail"
+                <p class="offer--detail offer-6"
                 style="color: white;
                 font-family: 'plus jakarta sans', sans-serif;
                 width: 75%;
@@ -208,113 +208,113 @@
     </div>
     <div class="menu-img">
         <div class="menu-headings">
-            <h1 class="menu-main--heading">Choose</h1>
-            <h2 class="menu-sub--heading"> WHAT YOU WANT</h2>
+            <h1 class="menu-main--heading menu-animation">Choose</h1>
+            <h2 class="menu-sub--heading menu-animation"> WHAT YOU WANT</h2>
         </div>
     </div>
     <div class="parent-container">
         <div class="menu-list-1">
-            <div class="menu-coffee">
-                <div class="menu-espresso" style="font-size: 38px; font-family: 'Dancing script'; color: #21A7B2;">espresso</div>
+            <div class="menu-coffee menu-things">
+                <div class="menu-espresso menu-things" style="font-size: 38px; font-family: 'Dancing script'; color: #21A7B2;">espresso</div>
                 <div class="coffee-sizes">
-                    <div class="medium-coffee" style="font-family: 'oswald', sans-serif;">Medium<br><span style="font-size: 16px; color: #21A7B2; ">16oz</span></div>
-                    <div class="large-coffee" style="font-family: 'oswald', sans-serif;">Large<br><span style="font-size: 16px; color: #21A7B2;">20oz</span></div>
+                    <div class="medium-coffee menu-things" style="font-family: 'oswald', sans-serif;">Medium<br><span style="font-size: 16px; color: #21A7B2; ">16oz</span></div>
+                    <div class="large-coffee menu-things" style="font-family: 'oswald', sans-serif;">Large<br><span style="font-size: 16px; color: #21A7B2;">20oz</span></div>
                 </div>
             </div>
-            <div class="menu-item1">
-                <div class="coffee-name">
+            <div class="menu-item1 menu-things">
+                <div class="coffee-name menu-things">
                     Espresso<br>
                     <span>Espresso, where passion meets perfection.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item2">
-                <div class="coffee-name">
+            <div class="menu-item2 menu-things">
+                <div class="coffee-name menu-things">
                     Mocchiato<br>
                     <span>The perfect harmony of espresso and sweetness</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item3">
-                <div class="coffee-name">
+            <div class="menu-item3 menu-things">
+                <div class="coffee-name menu-things">
                     Classic Cappucino<br>
                     <span>A timeless delight brewed just for you.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item4">
-                <div class="coffee-name">
+            <div class="menu-item4 menu-things">
+                <div class="coffee-name menu-things">
                     Cappucino<br>
                     <span>Where rich espresso meets frothy perfection.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item5">
-                <div class="coffee-name">
+            <div class="menu-item5 menu-things">
+                <div class="coffee-name menu-things">
                     Mocha Latte<br>
                     <span>The perfect blend of chocolate and espresso.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item6">
-                <div class="coffee-name">
+            <div class="menu-item6 menu-things">
+                <div class="coffee-name menu-things">
                     Caramel Latte<br>
                     <span>Where smooth espresso meets golden caramel bliss.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item7">
-                <div class="coffee-name">
+            <div class="menu-item7 menu-things">
+                <div class="coffee-name menu-things">
                     Cafe Americano<br>
                     <span>The essence of pure coffee bliss.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things">
                     <span>Large - </span>
                     2.20
                 </div>
@@ -324,107 +324,107 @@
             </div>
         </div>
         <div class="menu-list-2">
-            <div class="menu-coffee">
-                <div class="menu-espresso" style="font-size: 38px; font-family: 'Dancing script'; color: #21A7B2;">espresso</div>
-                <div class="coffee-sizes">
-                    <div class="medium-coffee" style="font-family: 'oswald', sans-serif;">Medium<br><span style="font-size: 16px; color: #21A7B2; ">16oz</span></div>
-                    <div class="large-coffee" style="font-family: 'oswald', sans-serif;">Large<br><span style="font-size: 16px; color: #21A7B2;">20oz</span></div>
+            <div class="menu-coffee menu-things-2">
+                <div class="menu-espresso menu-things-2" style="font-size: 38px; font-family: 'Dancing script'; color: #21A7B2;">espresso</div>
+                <div class="coffee-sizes menu-things-2">
+                    <div class="medium-coffee menu-things-2" style="font-family: 'oswald', sans-serif;">Medium<br><span style="font-size: 16px; color: #21A7B2; ">16oz</span></div>
+                    <div class="large-coffee menu-things-2" style="font-family: 'oswald', sans-serif;">Large<br><span style="font-size: 16px; color: #21A7B2;">20oz</span></div>
                 </div>
             </div>
-            <div class="menu-item1">
-                <div class="coffee-name">
+            <div class="menu-item1 menu-things-2">
+                <div class="coffee-name menu-things-2">
                     Espresso<br>
                     <span>Espresso, where passion meets perfection.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things-2">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things-2">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item2">
-                <div class="coffee-name">
+            <div class="menu-item2 menu-things-2">
+                <div class="coffee-name menu-things-2">
                     Mocchiato<br>
                     <span>The perfect harmony of espresso and sweetness</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things-2">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things-2">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item3">
-                <div class="coffee-name">
+            <div class="menu-item3 menu-things-2">
+                <div class="coffee-name menu-things-2">
                     Classic Cappucino<br>
                     <span>A timeless delight brewed just for you.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things-2">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things-2">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item4">
-                <div class="coffee-name">
+            <div class="menu-item4 menu-things-2">
+                <div class="coffee-name menu-things-2">
                     Cappucino<br>
                     <span>Where rich espresso meets frothy perfection.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things-2">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things-2">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item5">
-                <div class="coffee-name">
+            <div class="menu-item5 menu-things-2">
+                <div class="coffee-name menu-things-2">
                     Mocha Latte<br>
                     <span>The perfect blend of chocolate and espresso.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things-2">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things-2">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item6">
-                <div class="coffee-name">
+            <div class="menu-item6 menu-things-2">
+                <div class="coffee-name menu-things-2">
                     Caramel Latte<br>
                     <span>Where smooth espresso meets golden caramel bliss.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things-2">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things-2">
                     <span>Large - </span>
                     2.20
                 </div>
             </div>
-            <div class="menu-item7">
-                <div class="coffee-name">
+            <div class="menu-item7 menu-things-2">
+                <div class="coffee-name menu-things-2">
                     Cafe Americano<br>
                     <span>The essence of pure coffee bliss.</span>
                 </div>
-                <div class="medium-price">
+                <div class="medium-price menu-things-2">
                     <span>Medium - </span>
                     1.75
                 </div>
-                <div class="large-price">
+                <div class="large-price menu-things-2">
                     <span>Large - </span>
                     2.20
                 </div>
@@ -438,13 +438,13 @@
         <div class="review-img"></div>
         <div class="actual-review">
             <div class="review-headings">
-                <div class="review-main--heading">Customer</div>
-                <div class="review-sub--heading" style="font-weight: 600;">REVIEW</div>
+                <div class="review-main--heading review-animation">Customer</div>
+                <div class="review-sub--heading review-animation" style="font-weight: 600;">REVIEW</div>
             </div>
-            <div class="review-detail">
+            <div class="review-detail review-animation">
                 As a busy professional, I rely on my morning coffee to kickstart my day. The rich, smooth taste and heavenly aroma never fail to perk me up and get me ready to tackle whatever the day throws at me. It's like a little slice of heaven in a cup!
             </div>
-            <div class="reviewer-name" style="font-family: 'oswald'; padding-bottom: 20px;">Jenna Smith</div>
+            <div class="reviewer-name review-animation" style="font-family: 'oswald'; padding-bottom: 20px;">Jenna Smith</div>
         </div>
     </div>
     <div class="contact-number" style="color: white;">
