--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
         </div>
         <div class="menu-img">
             <div class="menu-headings">
-                <h1 class="menu-main--heading menu-animation">Choose</h1>
-                <h2 class="menu-sub--heading menu-animation"> WHAT YOU WANT</h2>
+                <h1 class="menu-main--heading">Choose</h1>
+                <h2 class="menu-sub--heading"> WHAT YOU WANT</h2>
             </div>
         </div>
         <div class="parent-container">
