index page done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="https://cdn.jsdelivr.net/npm/scroll-out@2.2.2/dist/scroll-out.min.js"></script>
 </head>
 <body>
-        <div class="background-image">
+        <div class="background-image" style="transition: all 0.5s ease-in-out;">
             <div class="slider-container">
                 <img src="assets/slide-1.jpg" alt="" class="slide">
                 <img src="assets/slide-2.jpg" alt="" class="slide" style="opacity: 0.3;">
@@ -43,16 +43,16 @@
                         <a href="menu.html" class="nav-link">Menu</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Booking</a>
+                        <a href="booking.html" class="nav-link">Booking</a>
                     </li>
                     <li>
-                        <a href="about.html"nav-link">About</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Blog</a>
+                        <a href="blog.html" class="nav-link">Blog</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="contact" class="nav-link" id="contact">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -228,7 +228,7 @@
             <div class="offer--grid-2">  
                 <div class="offer-grid--item11">
                     <div class="offer--headings">
-                        <h1 class="offer-main--heading offer-6">MOOD</h1>
+                        <h1 class="offer-main--heading offer-6">Mood</h1>
                         <h2 class="offer-sub--heading offer-6">BASED COFFEE<br>SUGGESTIONS</h2>
                     </div>
                     <p class="offer--detail offer-6"
